fix height on safari browser

--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -267,6 +267,7 @@ body {
   .gallery__photo {
     max-width: 100%;
     height: 100%;
+    max-height: 25rem;
     display: block; }
 
 .overview {
