--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -225,6 +225,7 @@
   &__photo {
     max-width: 100%;
     height: 100%;
+    max-height: 25rem;
     display: block;
   }
 }
